# sandbox

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .isort.cfg  BUILD.bazel  Cargo.toml  CmakeLists.txt  MODULE.bazel  conanfile.py  control.bat  readme.md  requirements.txt  rustfmt.toml
algoritms/dynamic programming/: ReadMe.md
algoritms/dynamic programming/0-1 Knapsack Problem/: ReadMe.md
algoritms/strings/: hashes.additive_hashing.md  search.md
algoritms/trees/: ReadMe.md
algoritms/trees/binary trees/: DFS.md
algos/: CmakeLists.txt
alogs/: ReadMe.md
codeforce/: CmakeLists.txt  control.bat
codeforce/builder/: main.mjs  package-lock.json  package.json
codeforce/builder/handlers/: create_new_test.mjs
codeforce/builder/templates/: file.tmpl.hpp  test.tmpl.cpp
codeforce/cpp/: CMakeLists.txt
codeforce/cpp-debug/: .gitignore
codeforce/cpp-utiles/: CMakeLists.txt
codeforce/cpp-utiles/tests/: math.mpow.hpp  trees.path_tree.test.cpp
codeforce/cpp/_template_/: .hpp  .test.cpp
codeforce/cpp/tests/: 0 - number of products.hpp  0 - swap of letters.test.cpp  0 - tanos sort.hpp  0 - tanos sort.test.cpp  0 - yelow cards.hpp  0 - yelow cards.test.cpp  cf.test.hpp
codeforces/builder/: package-lock.json  readme.md
codeforces/builder/handlers/: force_to_debug.mjs
codeforces/cpp/: CMakeLists.txt
cpp/concepts/cel_expressions/: BUILD.bazel  common.hpp  main.cpp  show_cases.cpp  show_cases_basic.cpp  show_cases_contexts.cpp  show_cases_methods.cpp  show_cases_value_producers.cpp
cpp/concepts/cel_expressions/proto/: messages.proto
cpp/concepts/error_codes/: BUILD.bazel  collector.cpp  collector.hpp  collector_ut.cpp
cpp/concepts/error_codes/error_codes/: collector.h
cpp/concepts/error_codes/golden/: ErrorCollectorTest.SimpleTest
cpp/concepts/error_codes/tests/: tests.cpp
cpp/concepts/error_codes/tests/golden/: ErrorCollectorTest.SimpleTest
cpp/concepts/intrusive_lru/: BUILD.bazel  readme.md
cpp/concepts/intrusive_lru/benchmarks/: bench.cpp  bench.ipynb  readme.md
cpp/concepts/intrusive_lru/intrusive_lru/: lru_v1.h  lru_v2.h
cpp/concepts/intrusive_lru/tests/: test.cpp
cpp/concepts/visit_any/: BUILD.bazel  visit.hpp  visit_ut.cpp
cpp/features/c++20.modules/ut/: CMakeLists.txt
cpp/notes/: profilng.md
interviews/yandex/: 2021-09-16 - I.cpp  2021-09-16 - II.cpp  2021-09-23 - II.cpp  2021-09-30 - final.cpp
leetcode/: ReadMe.md
leetcode/1 easy/: 1. Two Sum.cpp  191. Number of 1 Bits.cpp  66. Plus One.cpp  706. Design HashMap.cpp  859. Buddy Strings.cpp  977. Squares of a Sorted Array.cpp
leetcode/2 medium/: 1049. Last Stone Weight II.cpp  791. Custom Sort String.cpp  833. Find And Replace in String.cpp
leetcode/solutions/: !1504. Count Submatrices With All Ones.cpp  1122. Relative Sort Array.cpp  121. Best Time to Buy and Sell Stock.cpp  1329. Sort the Matrix Diagonally.cpp  1509. Minimum Difference Between Largest and Smallest Value in Three Moves.cpp  1768. Merge Strings Alternately.cpp  237. Delete Node in a Linked List.cpp  238. Product of Array Except Self.cpp  541. Reverse String II.cpp  931. Minimum Falling Path Sum.cpp
libs/: CmakeLists.txt
libs/math/: CMakeLists.txt
modern_cpp_features/c++20.modules/: BUILD  readme.md
modern_cpp_features/c++23.coroutines/: CMakeLists.txt  readme.md
modern_cpp_features/c++23.coroutines/generators.iterable/: .gitignore  CMakeLists.txt  generator_v2.cppm  generators.iterable.cpp
modern_cpp_features/c++23.views/: CMakeLists.txt  borrow_checking.cpp
modern_python_prototypes/asyncio_actors/: tests.ipynb
notes/c++/: profilng.md
problems/__hints__/: count subranges.md  graph.itinerary.md  tree.dfs.cpp  xor.counting.md
problems/leetcode/: ReadMe.md
projects/: CmakeLists.txt  ReadMe.md
projects/async_cpp/: CMakeLists.txt  a.cpp  a.cppm  main.cpp  readme.md
projects/async_cpp/generators.simple/: g.cpp
projects/c++20.modules/: CMakeLists.txt  module.cpp  module.cppm  readme.md
projects/c++20.modules/consumer/: CMakeLists.txt
projects/c++20.modules/submodule/: a.cppm
projects/c++20.modules/ut/: CMakeLists.txt  private_tests.cpp
projects/c++23.coroutines/: CMakeLists.txt
projects/c++23.views/: readme.md
projects/cross_basis/: CmakeLists.txt
projects/philips_hue_sunrise/: BUILD.bazel  __main__.py  readme.md
projects/technical_debt_management/: readme.md
python/: readme.md
python/prototypes/: readme.md
research/technical_debt_management/: index.md  model_props.model_A.md  model_props.model_B.md  optional_control.all_in.md
rust/basics/00.hellow_world/: BUILD.bazel  Cargo.toml
rust/basics/00.hellow_world/src/: greeter.rs  lib.rs  main.rs
rust/concepts/comp_for_macro/: BUILD.bazel  Cargo.toml  readme.md
rust/concepts/comp_for_macro/src/: lib.rs
rust/concepts/comp_for_macro/test/: lib.rs
rust/concepts/umbra_strings/: BUILD.bazel  Cargo.toml  readme.md
rust/concepts/umbra_strings/src/: _string.rs  _trailing.rs  lib.rs  string.rs
rust/concepts/umbra_strings/src/trailing/: as_arc.rs  as_box.rs  as_rc.rs  mod.rs  traits.rs
rust/concepts/umbra_strings/test/: lib.rs
rust/projects/massive_gravity_v1/: BUILD.bazel  Cargo.toml  project.todo  readme.md
rust/projects/massive_gravity_v1/doc/: architecture.md
rust/projects/massive_gravity_v1/src/: core.rs  main.rs
rust/projects/massive_gravity_v1/src/components/: camera.rs  mod.rs  view.rs
rust/projects/massive_gravity_v1/src/components/circles/: mod.rs  shader.wgsl
rust/projects/massive_gravity_v1/src/physics/: mod.rs  tests.rs
rust/projects/massive_gravity_v1/src/physics/coordinates/: mod.rs
rust/projects/massive_gravity_v1/src/physics/cpu/: barnes_hut.rs  direct_n2.rs  mod.rs
rust/projects/massive_gravity_v1/src/physics/energy/: mod.rs
rust/projects/massive_gravity_v1/src/physics/examples/: mod.rs
rust/projects/massive_gravity_v1/src/physics/integrators/: mod.rs
rust/projects/massive_gravity_v1/src/physics/timestep/: mod.rs
rust/projects/massive_gravity_v1/src/ui/: mod.rs
tools/modules/: BUILD  modules.bzl  setup.bzl
tools/setup/: readme.md  setup.py
(+323 files in other folders)
