
exports_files(
    [
        "rustfmt.toml",
        "clippy.toml",
    ]
)

# ============================
# block: windows: building with clang-cl
# https://bazel.build/configure/windows#clang

# TODO: rid of the crutch after toolchains_llvm windows support enabled

platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)

# block: done
# ============================
