module(name="sandbox")

# ----------------------------------------------------------
# rules_cc
# ----------------------------------------------------------

bazel_dep(name="rules_cc", version="0.1.1")

# ----------------------------------------------------------
# feature: LLVM / C++
# ----------------------------------------------------------

bazel_dep(name="toolchains_llvm", version="1.4.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency=True)
llvm.toolchain(
    name="llvm_toolchain",
    llvm_versions={"": "20.1.0"},  # NOTE: windows version should be installed by hands
    cxx_standard={"": "c++23"},
)

use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain//:all")

# ----------------------------------------------------------
# feature: Rust
# ----------------------------------------------------------

bazel_dep(name="rules_rust", version="0.57.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition="2021", versions=["1.84.0"], rustfmt_version="1.84.0")
use_repo(rust, "rust_toolchains")

# SA: https://bazelbuild.github.io/rules_rust/crate_universe_bzlmod.html
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        # NOTE: list all the rust modules
        # NOTE: should also be mentioned at the `./Cargo.toml`
        "//rust/basics/00.hellow_world:Cargo.toml",
        "//rust/concepts/comp_for_macro:Cargo.toml",
        "//rust/concepts/umbra_strings:Cargo.toml",
        "//rust/projects/massive_gravity_v1:Cargo.toml"
    ],
)
use_repo(crate, "crates")

# ----------------------------------------------------------
# setup external c++ packages
# ----------------------------------------------------------

# Bazel:

bazel_dep(name="abseil-cpp", version="20250127.1")
bazel_dep(name="boost.intrusive", version="1.87.0")
bazel_dep(name="cel-cpp", version="0.13.0")
bazel_dep(name="google_benchmark", version="1.9.2")
bazel_dep(name="googletest", version="1.17.0")

# NOTE: this patch enables {clang, c++23} support
git_override(
    module_name="cel-cpp",
    remote="https://github.com/google/cel-cpp.git",
    commit="cefca61ace5a4a1a25ecd9c04d1f30a76e6831de",
)

# Conan:

# load_conan_dependencies = use_extension(
#     "//build/conan:conan_deps_module_extension.bzl",
#     "conan_extension"
# )
# use_repo(load_conan_dependencies, "asio", "gtest")

# ----------------------------------------------------------
# extract build commmands (clangd & co.)
# ----------------------------------------------------------

bazel_dep(name="hedron_compile_commands", dev_dependency=True)
git_override(
    module_name="hedron_compile_commands",
    remote="https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit="1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
