load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

proto_library(
    name = "proto",
    srcs = ["proto/messages.proto"],
)

cc_proto_library(
    name = "proto_cc",
    deps = [":proto"],
)

py_proto_library(
    name = "proto_py",
    deps = [":proto"],
)

cc_test(
    name = "test",
    srcs = ["show_cases.cpp"],
    deps = [
        "@abseil-cpp//absl/status:status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:strings",
        "@cel-cpp//compiler:compiler_factory",
        "@cel-cpp//compiler:compiler",
        "@cel-cpp//compiler:standard_library",
        "@cel-cpp//eval/public:activation_bind_helper",
        "@cel-cpp//eval/public:activation",
        "@cel-cpp//eval/public:builtin_func_registrar",
        "@cel-cpp//eval/public:cel_expr_builder_factory",
        "@cel-cpp//eval/public:cel_expression",
        "@cel-cpp//eval/public:cel_function",
        "@cel-cpp//eval/public:cel_type_registry",
        "@cel-cpp//eval/public:cel_value",
        "@cel-cpp//parser:parser",
        "@googletest//:gtest_main",
        "//cpp/concepts/cel_expressions:proto_cc",
        "//cpp/utils/contrib:cel_cpp_tweaks",
    ],
)
