cc_library(
    name = "error_codes",
    hdrs = [
        "collector.hpp",
    ],
    srcs = [
        "collector.cpp",
    ],
    deps = [
        # pass
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "collector_ut.cpp",
    ],
    deps = [
        ":error_codes",
        "@googletest//:gtest_main",
        "//cpp/utils/tests/gtest_golden:gtest_golden",
    ],
    data = [
        "golden",
    ],
    tags = [
        "no-sandbox",
    ],
    local = True,
)
