load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "hello_lib",
    srcs = [
        "src/greeter.rs",
        "src/lib.rs",
    ],
    data = [
        "data/greeting.txt"
    ],
    deps = [
        "@rules_rust//tools/runfiles",
        "@crates//:rand",
    ],
)

rust_binary(
    name = "hello_world",
    srcs = ["src/bin/main.rs"],
    deps = [":hello_lib"],
)

rust_test(
    name = "hello_lib_test",
    crate = ":hello_lib",
)
