load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "bin",
    srcs = [
        "src/components/camera.rs",
        "src/components/circles/mod.rs",
        "src/components/mod.rs",
        "src/core.rs",
        "src/main.rs",
        "src/physics/coordinates/mod.rs",
        "src/physics/cpu/barnes_hut.rs",
        "src/physics/cpu/direct_n2.rs",
        "src/physics/cpu/mod.rs",
        "src/physics/energy/mod.rs",
        "src/physics/examples/mod.rs",
        "src/physics/integrators/mod.rs",
        "src/physics/mod.rs",
        "src/physics/tests.rs",
        "src/physics/timestep/mod.rs",
        "src/ui/mod.rs",
    ],
    data = [
        "src/components/circles/shader.wgsl"
    ],
    proc_macro_deps = [
        "@crates//:bytemuck_derive",
    ],
    deps = [
        "@crates//:bytemuck",
        "@crates//:derive_builder",
        "@crates//:env_logger",
        "@crates//:imgui-wgpu",
        "@crates//:imgui-winit-support",
        "@crates//:imgui",
        "@crates//:log",
        "@crates//:nalgebra",
        "@crates//:pollster",
        "@crates//:rand",
        "@crates//:static_assertions",
        "@crates//:wgpu",
        "@crates//:winit",
        "@rules_rust//tools/runfiles",
    ],
)

rust_test(
    name = "ut",
    crate = ":bin",
    deps = [
        "@crates//:num-traits",
    ],
)
