load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "bin",
    srcs = glob(["src/**/*.rs"]),
    data = [
        "src/components/circles/shader.wgsl"
    ],
    proc_macro_deps = [
        "@crates//:bytemuck_derive",
    ],
    deps = [
        "@crates//:bytemuck",
        "@crates//:derive_builder",
        "@crates//:env_logger",
        "@crates//:imgui-wgpu",
        "@crates//:imgui-winit-support",
        "@crates//:imgui",
        "@crates//:log",
        "@crates//:nalgebra",
        "@crates//:pollster",
        "@crates//:rand",
        "@crates//:static_assertions",
        "@crates//:wgpu",
        "@crates//:winit",
        "@rules_rust//tools/runfiles",
    ],
)

rust_test(
    name = "ut",
    crate = ":bin",
    deps = [
        "@crates//:num-traits",
    ],
)
