[package]
name = "massive_gravity_v1"
edition = "2021"
version = "0.1.0"

[dependencies]

# graphics
wgpu = "24.0.1"
wgpu-types = "24.0.0"
winit = "0.30.9"

# other
bytemuck = "1.21.0"
bytemuck_derive = "1.8.1"
derive_builder = "0.20.2"
env_logger = "0.11.6"
log = "0.4.22"
pollster = "0.4.0"
static_assertions = "1.1.0"

[dev-dependencies]
